<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">

    <EditText
            android:id="@+id/month_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:hint="@string/month_placeholder"
            android:imeOptions="actionNext|flagNoFullscreen"
    />
    <TextView
            android:id="@+id/dash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:text=" / "
    />
    <EditText
            android:id="@+id/year_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:inputType="date"
            android:hint="@string/year_placeholder"
            android:imeOptions="actionNext|flagNoFullscreen"
    />
</merge>