<?xml version="1.0" encoding="utf-8"?>
<merge
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:orientation="vertical">

    <EditText
            android:id="@+id/card_number_edit_text"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="0.7"
            android:hint="@string/card_number_hint"
            android:maxLines="1"
            android:inputType="number"
            android:digits="0123456789"
            android:imeOptions="actionNext|flagNoFullscreen"
            tools:ignore="Autofill"/>
    <ImageView
            android:id="@+id/logo_view"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.3"
            android:scaleType="centerInside"
            android:src="@drawable/card_unknown_logo"
            android:contentDescription="@string/card_brand_icon"
    />

</merge>
