...
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/card_flow_multi_session_switch_title"
        app:layout_constraintStart_toStartOf="@+id/card_flow_multi_session_switch_title"
        app:layout_constraintTop_toBottomOf="@+id/card_flow_multi_session_switch_title" />

    <Button
        android:id="@+id/card_flow_btn_submit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@android:color/darker_gray"
        android:enabled="false"
        android:text="@string/submit_text"
...
