<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_cvv_flow"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".sample.ui.CvvFlowFragment">

    <EditText
        android:id="@+id/cvv_flow_text_cvv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="24dp"
        android:ems="4"
        android:imeOptions="actionDone|flagNoFullscreen"
        android:inputType="number"
        android:textColor="@color/DEFAULT"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/cvv_flow_btn_submit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:background="@android:color/darker_gray"
        android:enabled="false"
        android:text="@string/submit_text"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cvv_flow_text_cvv" />


</androidx.constraintlayout.widget.ConstraintLayout>
